--- a/foundry.toml
+++ b/foundry.toml
@@ -9,6 +9,6 @@ sizes = true
 
 [profile.CI] # run via FOUNDRY_PROFILE=CI foundry test
 fs_permissions = [{ access = "read", path = "./node_modules/@jbx-protocol/juice-contracts-v3/deployments/mainnet"}] # Get the deployment addresses for forking
-match_contract = "Unit || Fork" 
+match_contract = "Unit || Fork || Int"
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
